--- a/packages/energy/goodwe_mode.yaml
+++ b/packages/energy/goodwe_mode.yaml
@@ -1,111 +1,112 @@
----
-automation:
-  - alias: Inverter set general mode
-    description: Inverter set general mode after reaching 100% in backup mode
-    trigger:
-      - platform: state
-        entity_id: sensor.goodwe_battery_mode_label
-        to: 'Standby'
-        for:
-          seconds: 25
-    condition:
-      - condition: state
-        entity_id: sensor.goodwe_battery_soc
-        state: '100'
-      - condition: state
-        entity_id: sensor.goodwe_battery_mode_label
-        state: 'Standby'
-      - condition: state
-        entity_id: sensor.goodwe_inverter_operation_mode
-        state: 'Backup mode'
-    action:
-      - service: select.select_option
-        target:
-          entity_id: select.inverter_operation_mode
-        data:
-          option: General mode
-      - alias: "Log action taken"
-        service: script.log
-        data:
-          icon: ':zap:'
-          object: 'GoodWe'
-          message: >
-            Setting inverter to 'General mode' after battery SoC reached 100% in 'Backup mode'
-      - delay: '00:00:30' # Waits 30 seconds
-      - condition: numeric_state
-        entity_id: sensor.goodwe_depth_of_discharge_on_grid
-        below: '6'
-      - alias: "Set DoD on inverter"
-        service: number.set_value
-        data:
-          value: 16
-        target:
-          entity_id: number.depth_of_discharge_on_grid
+# ---
+# automation:
+#   - alias: Inverter set general mode
+#     description: Inverter set general mode after reaching 100% in backup mode
+#     trigger:
+#       - platform: state
+#         entity_id: sensor.goodwe_battery_mode_label
+#         to: 'Standby'
+#         for:
+#           seconds: 25
+#     condition:
+#       - condition: state
+#         entity_id: sensor.goodwe_battery_soc
+#         state: '100'
+#       - condition: state
+#         entity_id: sensor.goodwe_battery_mode_label
+#         state: 'Standby'
+#       - not:
+#           - condition: state
+#             entity_id: sensor.goodwe_inverter_operation_mode
+#             state: 'General mode'
+#     action:
+#       - service: select.select_option
+#         target:
+#           entity_id: select.inverter_operation_mode
+#         data:
+#           option: General mode
+#       - alias: "Log action taken"
+#         service: script.log
+#         data:
+#           icon: ':zap:'
+#           object: 'GoodWe'
+#           message: >
+#             Setting inverter to 'General mode' after battery SoC reached 100% in 'Backup mode'
+#       - delay: '00:00:30' # Waits 30 seconds
+#       - condition: numeric_state
+#         entity_id: sensor.goodwe_depth_of_discharge_on_grid
+#         below: '6'
+#       - alias: "Set DoD on inverter"
+#         service: number.set_value
+#         data:
+#           value: 16
+#         target:
+#           entity_id: number.depth_of_discharge_on_grid
 
-  - alias: Inverter set backup mode
-    description: Inverter set backup mode at 6pm if battery didn't charge to 100%
-    mode: single
-    # trigger:
-    #   - platform: time
-    #     at: '18:00:00'
-    # condition:
-    #   - condition: numeric_state
-    #     entity_id: sensor.goodwe_battery_soc_daily_max
-    #     below: 100
-    #   - condition: state
-    #     entity_id: sensor.goodwe_inverter_operation_mode
-    #     state: 'General mode'
-    #   # if current SoC above 89% - else we really top up too much from grid
-    #   - condition: numeric_state
-    #     entity_id: sensor.goodwe_battery_soc
-    #     above: '84'
-    #   # Only if in online/grid mode, else backup might loser power
-    #   - condition: state
-    #     entity_id: sensor.goodwe_work_mode_label
-    #     state: 'Normal (On-Grid)'
-    #   # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
-    #   - condition: numeric_state
-    #     entity_id: sensor.solcast_forecast_energy_tomorrow
-    #     above: '20'
-    trigger:
-      - platform: state
-        entity_id: sensor.goodwe_battery_mode_label
-        to: 'Standby'
-      - platform: state
-        entity_id: sensor.goodwe_battery_mode_label
-        to: 'Discharging'
-    condition:
-      - condition: numeric_state
-        entity_id: sensor.goodwe_battery_soc_daily_max
-        above: 88
-      - condition: state
-        entity_id: sensor.goodwe_inverter_operation_mode
-        state: 'General mode'
-      - condition: state
-        entity_id: sensor.goodwe_battery_soc
-        state: '89'
-        for:
-          minutes: 55
-      # Only if in online/grid mode, else backup might loser power
-      - condition: state
-        entity_id: sensor.goodwe_work_mode_label
-        state: 'Normal (On-Grid)'
-      # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
-      - condition: numeric_state
-        entity_id: sensor.solcast_forecast_energy_tomorrow
-        above: '18'
-      - condition: template
-        value_template: "{{ ('15:00' < states('sensor.time') < '19:00') }}"
-    action:
-      - service: select.select_option
-        target:
-          entity_id: select.inverter_operation_mode
-        data:
-          option: Backup mode
-      - alias: "Log action taken"
-        service: script.log
-        data:
-          icon: ':zap:'
-          object: 'GoodWe'
-          message: >
-            Setting inverter to 'Backup mode' because battery SoC never reached 100% in 'General mode' (Max: {{ states('sensor.goodwe_battery_soc_daily_max') }})
+#   - alias: Inverter set backup mode
+#     description: Inverter set backup mode at 6pm if battery didn't charge to 100%
+#     mode: single
+#     # trigger:
+#     #   - platform: time
+#     #     at: '18:00:00'
+#     # condition:
+#     #   - condition: numeric_state
+#     #     entity_id: sensor.goodwe_battery_soc_daily_max
+#     #     below: 100
+#     #   - condition: state
+#     #     entity_id: sensor.goodwe_inverter_operation_mode
+#     #     state: 'General mode'
+#     #   # if current SoC above 89% - else we really top up too much from grid
+#     #   - condition: numeric_state
+#     #     entity_id: sensor.goodwe_battery_soc
+#     #     above: '84'
+#     #   # Only if in online/grid mode, else backup might loser power
+#     #   - condition: state
+#     #     entity_id: sensor.goodwe_work_mode_label
+#     #     state: 'Normal (On-Grid)'
+#     #   # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
+#     #   - condition: numeric_state
+#     #     entity_id: sensor.solcast_forecast_energy_tomorrow
+#     #     above: '20'
+#     trigger:
+#       - platform: state
+#         entity_id: sensor.goodwe_battery_mode_label
+#         to: 'Standby'
+#       - platform: state
+#         entity_id: sensor.goodwe_battery_mode_label
+#         to: 'Discharging'
+#     condition:
+#       - condition: numeric_state
+#         entity_id: sensor.goodwe_battery_soc_daily_max
+#         above: 88
+#       - condition: state
+#         entity_id: sensor.goodwe_inverter_operation_mode
+#         state: 'General mode'
+#       - condition: state
+#         entity_id: sensor.goodwe_battery_soc
+#         state: '89'
+#         for:
+#           minutes: 55
+#       # Only if in online/grid mode, else backup might loser power
+#       - condition: state
+#         entity_id: sensor.goodwe_work_mode_label
+#         state: 'Normal (On-Grid)'
+#       # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
+#       - condition: numeric_state
+#         entity_id: sensor.solcast_forecast_energy_tomorrow
+#         above: '18'
+#       - condition: template
+#         value_template: "{{ ('15:00' < states('sensor.time') < '19:00') }}"
+#     action:
+#       - service: select.select_option
+#         target:
+#           entity_id: select.inverter_operation_mode
+#         data:
+#           option: Backup mode
+#       - alias: "Log action taken"
+#         service: script.log
+#         data:
+#           icon: ':zap:'
+#           object: 'GoodWe'
+#           message: >
+#             Setting inverter to 'Backup mode' because battery SoC never reached 100% in 'General mode' (Max: {{ states('sensor.goodwe_battery_soc_daily_max') }})
