add fake secret

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -3,6 +3,8 @@
 # But for publishing on GitHub as well.
 # These are (of course) not my actual secrets...
 
+EskomSePush: token
+
 # ESPHome (generic)
 esphome_api_password: password
 esphome_ota_password: password
