--- a/custom_components/midea_ac/manifest.json
+++ b/custom_components/midea_ac/manifest.json
@@ -1,9 +1,13 @@
 {
         "domain": "midea_ac",
-        "name": "Midea Smart Aircon",
-        "version": "0.2.3",
-        "documentation": "",
-        "requirements": ["msmart==0.2.3", "pycryptodome", "pycryptodomex", "click"],
+        "name": "Midea Smart AC",
+        "version": "0.2.4",
+        "documentation": "https://github.com/mac-zhou/midea-ac-py",
+        "issue_tracker": "https://github.com/mac-zhou/midea-ac-py/issues",
+        "requirements": ["msmart==0.2.5", "pycryptodome", "pycryptodomex", "click"],
         "dependencies": [],
-        "codeowners": ["@mac-zhou"]
+        "codeowners": ["@mac-zhou"],
+        "iot_class": "local_polling",
+        "config_flow": true,
+        "loggers": ["msmart"]
 }
