--- a/packages/lights/light_triggers_morning.yaml
+++ b/packages/lights/light_triggers_morning.yaml
@@ -17,7 +17,11 @@ automation:
             {%- for domain in domains -%}
               {%- for item in states[domain]  -%}
                 {%- if item.entity_id not in ['light.main_bathroom'] and state_attr(item.entity_id, 'icon') == none %}
+                  {%- if states('timer.morning_routine') == 'active' and item.entity_id in ['light.main_bathroom','light.kitchen','light.small_bedroom'] -%}
+                  {%- set data.lights_todo = data.lights_todo %}
+                  {%- else -%}
                   {%- set data.lights_todo = data.lights_todo + [item.entity_id] %}
+                  {%- endif -%}
                 {%- endif -%}
               {%- endfor -%}
             {%- endfor -%}
