--- a/packages/energy/eskomsepush.yaml
+++ b/packages/energy/eskomsepush.yaml
@@ -42,31 +42,85 @@ sensor:
         friendly_name: Next loadshedding time
         device_class: timestamp
         unique_id: Next_Loadshedding_Time
-        value_template: "{{ state_attr('sensor.eskomsepush','events')[0].start }}"
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+                {%if (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].start }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].start }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{ state_attr('sensor.eskomsepush','events')[1].start }}
+                {%else%}
+                Unknown
+                {%endif%}
+            {%else%}
+            Unknown
+            {%endif%}
       next_loadshedding_event:
         friendly_name: Next loadshedding event
         unique_id: Next_Loadshedding_Event
-        value_template: "{{ state_attr('sensor.eskomsepush','events')[0].note }}"
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+                {%if (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].note }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].note }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{ state_attr('sensor.eskomsepush','events')[1].note }}
+                {%else%}
+                None
+                {%endif%}
+            {%else%}
+            Suspended
+            {%endif%}
       next_loadshedding_time_end:
         friendly_name: Next loadshedding end time
         unique_id: Next_Loadshedding_End_Time
         device_class: timestamp
-        value_template: "{{ state_attr('sensor.eskomsepush','events')[0].end }}"
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+                {%if (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].end }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) < as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{state_attr('sensor.eskomsepush','events')[0].end }}
+                {%elif (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].start)) and (as_timestamp(now()) > as_timestamp(state_attr('sensor.eskomsepush','events')[0].end)) %}
+                {{ state_attr('sensor.eskomsepush','events')[1].end }}
+                {%else%}
+                Unknown
+                {%endif%}
+            {%else%}
+            Unknown
+            {%endif%}
       next_loadshedding_duration:
         friendly_name: Next loadshedding duration
         unique_id: Next_Loadshedding_Duration
         unit_of_measurement: mins
-        value_template: '{{ [( as_timestamp(states.sensor.next_loadshedding_time_end.state) | int - as_timestamp(states.sensor.next_loadshedding_time.state) | int ) / 60,-1] | max | round(0) }}'
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+            {{ (as_timestamp(states("sensor.next_loadshedding_time_end")) - as_timestamp(states("sensor.next_loadshedding_time"))) / 60 }}'
+            {%else%}
+            Unknown
+            {%endif%}
       time_till_loadshedding:
         friendly_name: Time until next loadshedding
         unique_id: Time_Until_Next_Loadshedding
         unit_of_measurement: mins
-        value_template: '{{ [( as_timestamp(states.sensor.next_loadshedding_time.state) | int - as_timestamp(now()) | int ) / 60,-1] | max | round(0) }}'
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+            {{ [( as_timestamp(states.sensor.next_loadshedding_time.state) | int - as_timestamp(now()) | int ) / 60,-1] | max }}
+            {%else%}
+            Unknown
+            {%endif%}
       time_till_loadshedding_ends:
         friendly_name: Time until next loadshedding ends
         unique_id: Time_Until_Next_Loadshedding_ends
         unit_of_measurement: mins
-        value_template: '{{ [( as_timestamp(states.sensor.next_loadshedding_time_end.state) | int - as_timestamp(now()) | int ) / 60,-1] | max | round(0) }}'
+        value_template: >
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+            {{ [( as_timestamp(states.sensor.next_loadshedding_time_end.state) | int - as_timestamp(now()) | int ) / 60,-1] | max }}
+            {%else%}
+            Unknown
+            {%endif%}
 
       eskomsepush_calls_remaining:
         friendly_name: EskomSePush API Calls remaining
@@ -77,11 +131,15 @@ sensor:
         friendly_name: Loadshedding slot forecast
         unique_id: loadshedding_slot_forecast
         value_template: >
+          {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
           {%- for event in states['sensor.eskomsepush'].attributes.events -%} {{
           as_timestamp(event['start']) | timestamp_custom('%a %d %b:') }} {{ event['note'] }} {{
           as_timestamp(event['start']) | timestamp_custom('from %H:%M') }} to {{
           as_timestamp(event['end']) | timestamp_custom('%H:%M') }}
           {{- '\n' -}} {%- endfor -%}
+          {%else%}
+          None scheduled
+          {%endif%}
 
 binary_sensor:
   - platform: template
@@ -90,10 +148,14 @@ binary_sensor:
         friendly_name: "Loadshedding active"
         device_class: problem
         value_template: >
-            {% if (int(states('sensor.time_till_loadshedding')) <= 0 ) %}
-             True
+            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
+                {% if (int(states('sensor.time_till_loadshedding')) <= 0 ) %}
+                 True
+                {% else %}
+                 False
+                {% endif %}
             {% else %}
-             False
+            False
             {% endif %}
 
 timer:
